--- a/category.ipynb
+++ b/category.ipynb
@@ -4298,7 +4298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -4311,6 +4311,15 @@
      "metadata": {
       "needs_background": "light"
      },
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -4336,7 +4345,8 @@
     "        \n",
     "ax.set_title(\"Videos Trending in Multiple Countries\")\n",
     "fig.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.savefig('heatmap.jpg')"
    ]
   },
   {
