beefed it up a little

--- a/category.ipynb
+++ b/category.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4187,73 +4187,451 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>category_id_x</th>\n",
+       "      <th>category_id_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>j4KvrAUjn6c</td>\n",
+       "      <td>30</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MAjY8mCTXWk</td>\n",
+       "      <td>29</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>r-3iathMo7o</td>\n",
+       "      <td>29</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>QBL8IRJ5yHU</td>\n",
+       "      <td>29</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8h--kFui1JA</td>\n",
+       "      <td>29</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      video_id  category_id_x  category_id_y\n",
+       "0  j4KvrAUjn6c             30             24\n",
+       "1  MAjY8mCTXWk             29             10\n",
+       "2  r-3iathMo7o             29             28\n",
+       "3  QBL8IRJ5yHU             29             26\n",
+       "4  8h--kFui1JA             29             10"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "us_category_df_ND = us_data[['video_id', 'category_id']].drop_duplicates()\n",
     "us_category_df = us_data[['video_id', 'category_id']]\n",
     "grpby_obj = us_category_df.groupby('video_id').count()\n",
     "grpby_obj.sort_values(by = 'category_id', ascending = False)\n",
-    "us_trends = pd.merge(grpby_obj.sort_values(by = 'category_id', ascending = False), us_category_df_ND, on = 'video_id' )\n"
+    "us_trends = pd.merge(grpby_obj.sort_values(by = 'category_id', ascending = False), us_category_df_ND, on = 'video_id' )\n",
+    "us_trends.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>category_id_x</th>\n",
+       "      <th>category_id_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Il-an3K9pjg</td>\n",
+       "      <td>38</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2z3EUY1aXdY</td>\n",
+       "      <td>38</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NooW_RbfdWI</td>\n",
+       "      <td>38</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>u_C4onVrr8U</td>\n",
+       "      <td>38</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BhIEIO0vaBE</td>\n",
+       "      <td>38</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      video_id  category_id_x  category_id_y\n",
+       "0  Il-an3K9pjg             38             10\n",
+       "1  2z3EUY1aXdY             38             17\n",
+       "2  NooW_RbfdWI             38             24\n",
+       "3  u_C4onVrr8U             38             10\n",
+       "4  BhIEIO0vaBE             38             22"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gb_category_df_ND = gb_data[['video_id', 'category_id']].drop_duplicates()\n",
     "gb_category_df = gb_data[['video_id', 'category_id']]\n",
     "gb_grpby_obj = gb_category_df.groupby('video_id').count()\n",
     "gb_grpby_obj.sort_values(by = 'category_id', ascending = False)\n",
     "gb_trends = pd.merge(gb_grpby_obj.sort_values(by = 'category_id', ascending = False), gb_category_df_ND, on = 'video_id' )\n",
-    "\n"
+    "gb_trends.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>category_id_x</th>\n",
+       "      <th>category_id_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rter-Np-Td0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RcPik8IivHY</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CG9EGStW-nE</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>aJOTlE1K90k</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>lHz-0c2dMDA</td>\n",
+       "      <td>5</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      video_id  category_id_x  category_id_y\n",
+       "0  Rter-Np-Td0              6             10\n",
+       "1  RcPik8IivHY              5             22\n",
+       "2  CG9EGStW-nE              5             20\n",
+       "3  aJOTlE1K90k              5             10\n",
+       "4  lHz-0c2dMDA              5             25"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fr_category_df_ND = fr_data[['video_id', 'category_id']].drop_duplicates()\n",
     "fr_category_df = fr_data[['video_id', 'category_id']]\n",
     "fr_grpby_obj = fr_category_df.groupby('video_id').count()\n",
     "fr_grpby_obj.sort_values(by = 'category_id', ascending = False)\n",
-    "fr_trends = pd.merge(fr_grpby_obj.sort_values(by = 'category_id', ascending = False), fr_category_df_ND, on = 'video_id' )"
+    "fr_trends = pd.merge(fr_grpby_obj.sort_values(by = 'category_id', ascending = False), fr_category_df_ND, on = 'video_id' )\n",
+    "fr_trends.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>category_id_x</th>\n",
+       "      <th>category_id_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>pk0iqFne5eU</td>\n",
+       "      <td>7</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>myXi1KMyClc</td>\n",
+       "      <td>6</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>P-_iVRTAFQ8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4NuxEUGnXQs</td>\n",
+       "      <td>5</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>McRNSFGwqtY</td>\n",
+       "      <td>5</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      video_id  category_id_x  category_id_y\n",
+       "0  pk0iqFne5eU              7             22\n",
+       "1  myXi1KMyClc              6             24\n",
+       "2  P-_iVRTAFQ8              5             24\n",
+       "3  4NuxEUGnXQs              5             24\n",
+       "4  McRNSFGwqtY              5             22"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "de_category_df_ND = de_data[['video_id', 'category_id']].drop_duplicates()\n",
     "de_category_df = de_data[['video_id', 'category_id']]\n",
     "de_grpby_obj = de_category_df.groupby('video_id').count()\n",
     "de_grpby_obj.sort_values(by = 'category_id', ascending = False)\n",
     "de_trends = pd.merge(de_grpby_obj.sort_values(by = 'category_id', ascending = False), de_category_df_ND, on = 'video_id' )\n",
-    "\n"
+    "de_trends.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>category_id_x</th>\n",
+       "      <th>category_id_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UceaB4D0jpo</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>l_lblj8Cq0o</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6ZfuNTqbHE8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>VYOjWnS4cMY</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>VJwoSfTOhyM</td>\n",
+       "      <td>7</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      video_id  category_id_x  category_id_y\n",
+       "0  UceaB4D0jpo              8             10\n",
+       "1  l_lblj8Cq0o              8             10\n",
+       "2  6ZfuNTqbHE8              8             24\n",
+       "3  VYOjWnS4cMY              8             10\n",
+       "4  VJwoSfTOhyM              7             17"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ca_category_df_ND = ca_data[['video_id', 'category_id']].drop_duplicates()\n",
     "ca_category_df = ca_data[['video_id', 'category_id']]\n",
     "ca_grpby_obj = ca_category_df.groupby('video_id').count()\n",
     "ca_grpby_obj.sort_values(by = 'category_id', ascending = False)\n",
-    "ca_trends = pd.merge(ca_grpby_obj.sort_values(by = 'category_id', ascending = False), ca_category_df_ND, on = 'video_id' )"
+    "ca_trends = pd.merge(ca_grpby_obj.sort_values(by = 'category_id', ascending = False), ca_category_df_ND, on = 'video_id' )\n",
+    "ca_trends.head()"
    ]
   },
   {
