--- a/category.ipynb
+++ b/category.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4187,84 +4187,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>video_id</th>\n",
-       "      <th>category_id_x</th>\n",
-       "      <th>category_id_y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>j4KvrAUjn6c</td>\n",
-       "      <td>30</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>MAjY8mCTXWk</td>\n",
-       "      <td>29</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>r-3iathMo7o</td>\n",
-       "      <td>29</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>QBL8IRJ5yHU</td>\n",
-       "      <td>29</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>8h--kFui1JA</td>\n",
-       "      <td>29</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      video_id  category_id_x  category_id_y\n",
-       "0  j4KvrAUjn6c             30             24\n",
-       "1  MAjY8mCTXWk             29             10\n",
-       "2  r-3iathMo7o             29             28\n",
-       "3  QBL8IRJ5yHU             29             26\n",
-       "4  8h--kFui1JA             29             10"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 6368 entries, 0 to 6367\n",
+      "Data columns (total 3 columns):\n",
+      "video_id         6368 non-null object\n",
+      "category_id_x    6368 non-null int64\n",
+      "category_id_y    6368 non-null int64\n",
+      "dtypes: int64(2), object(1)\n",
+      "memory usage: 199.0+ KB\n"
+     ]
     }
    ],
    "source": [
@@ -4273,7 +4213,7 @@
     "grpby_obj = us_category_df.groupby('video_id').count()\n",
     "grpby_obj.sort_values(by = 'category_id', ascending = False)\n",
     "us_trends = pd.merge(grpby_obj.sort_values(by = 'category_id', ascending = False), us_category_df_ND, on = 'video_id' )\n",
-    "us_trends.head()"
+    "us_trends.info()"
    ]
   },
   {
@@ -4547,82 +4487,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>video_id</th>\n",
-       "      <th>category_id_x</th>\n",
-       "      <th>category_id_y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>UceaB4D0jpo</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>l_lblj8Cq0o</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6ZfuNTqbHE8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>VYOjWnS4cMY</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>VJwoSfTOhyM</td>\n",
-       "      <td>7</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      video_id  category_id_x  category_id_y\n",
-       "0  UceaB4D0jpo              8             10\n",
-       "1  l_lblj8Cq0o              8             10\n",
-       "2  6ZfuNTqbHE8              8             24\n",
-       "3  VYOjWnS4cMY              8             10\n",
-       "4  VJwoSfTOhyM              7             17"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 24448 entries, 0 to 24447\n",
+      "Data columns (total 3 columns):\n",
+      "video_id         24448 non-null object\n",
+      "category_id_x    24448 non-null int64\n",
+      "category_id_y    24448 non-null int64\n",
+      "dtypes: int64(2), object(1)\n",
+      "memory usage: 764.0+ KB\n"
+     ]
     }
    ],
    "source": [
@@ -4631,7 +4511,7 @@
     "ca_grpby_obj = ca_category_df.groupby('video_id').count()\n",
     "ca_grpby_obj.sort_values(by = 'category_id', ascending = False)\n",
     "ca_trends = pd.merge(ca_grpby_obj.sort_values(by = 'category_id', ascending = False), ca_category_df_ND, on = 'video_id' )\n",
-    "ca_trends.head()"
+    "ca_trends.info()"
    ]
   },
   {
